Fix overflow error

--- a/scss/misc.scss
+++ b/scss/misc.scss
@@ -62,6 +62,7 @@ body.has-sidebar-page #main-outlet-wrapper, body #main-outlet-wrapper {
     gap: 0 0.6em;
     #main-outlet {
         max-width: unset;
+        width: 100%;
     }
 }
 
